# sphinx-ifelse

./: LICENSE  README.md  pyproject.toml
.github/workflows/: builddoc.yml  release.yaml
docs/: conf.py  elif_else_examples.rst  embedded_examples.rst  error.rst  examples.rst  index.rst  missing_previous_content.rst  requirements.txt  spacing_examples.rst  variants.rst
docs/tests/: tests.rst
sphinx_ifelse/: __init__.py  directives.py  ifelse.py  utils.py
tests/: requirements.txt  test_directives.py  test_directives_error.py  test_directives_variants.py
tests/error_project/source/: conf.py  error.rst  index.rst  missing_previous_content.rst
tests/test_project/source/: conf.py  elif_else_examples.rst  index.rst  minimum_example.rst  spacing_examples.rst
tests/variants_project/source/: conf.py  index.rst
